--- a/estilo.css
+++ b/estilo.css
@@ -72,3 +72,22 @@ button {
     border-radius: 30px;
   }
 
+  @media (max-width: 800px) {
+    
+    .habilidades {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+    }
+    .descricao {
+        display: flex;
+        flex-direction: column;
+        width: 100%;  
+    }
+    .banner h1 {
+        display: flex;
+        flex-direction: column;
+        width: 100%; 
+        text-align: center;
+    }
+  }
